--- a/package.json
+++ b/package.json
@@ -1,43 +1,70 @@
 {
-  "name": "pugio-web",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "pugio-web",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^16.11.26",
+        "@types/react": "^17.0.43",
+        "@types/react-dom": "^17.0.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "5.0.0",
+        "typescript": "^4.6.3",
+        "web-vitals": "^2.1.4"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/plugin-proposal-decorators": "^7.17.2",
+        "@types/is-promise": "^2.2.0",
+        "@types/jest": "^26.0.23",
+        "@types/lodash": "^4.14.180",
+        "@types/node": "^15.12.2",
+        "@types/react": "^16.14.24",
+        "@types/react-dom": "^16.9.14",
+        "@typescript-eslint/eslint-plugin": "^4.27.0",
+        "@typescript-eslint/parser": "^4.27.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.2",
+        "css-loader": "^2.1.1",
+        "customize-cra": "^1.0.0-alpha.0",
+        "customize-cra-less-loader": "^2.0.0",
+        "eslint": "^7.28.0",
+        "eslint-config-alloy": "^4.1.0",
+        "fs-extra": "^10.0.0",
+        "glob": "^7.1.7",
+        "jest": "^27.0.4",
+        "less": "^4.1.2",
+        "less-loader": "^7.3.0",
+        "md5-file": "^5.0.0",
+        "npm-run-all": "^4.1.5",
+        "react-app-rewired": "^2.2.1",
+        "react-dev-utils": "^12.0.0",
+        "rimraf": "^3.0.2"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
