--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "khamsa": "^0.9.3",
+        "lodash": "^4.17.21",
+        "mustache": "^4.2.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^6.2.2",
@@ -23,7 +25,8 @@
         "@babel/plugin-proposal-decorators": "^7.17.2",
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
-        "@types/lodash": "^4.14.180",
+        "@types/lodash": "^4.14.181",
+        "@types/mustache": "^4.1.2",
         "@types/node": "^15.12.2",
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
