--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "@lenconda/shuffle-mui-theme": "^1.0.0",
+        "@mui/icons-material": "^5.5.1",
+        "@mui/material": "^5.5.3",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -10,6 +15,7 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "immutable": "^4.0.0",
         "khamsa": "^0.9.3",
         "lodash": "^4.17.21",
         "mustache": "^4.2.0",
@@ -18,7 +24,9 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "typescript": "^4.6.3",
-        "web-vitals": "^2.1.4"
+        "uuid": "^8.3.2",
+        "web-vitals": "^2.1.4",
+        "zustand": "^3.7.1"
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
@@ -30,6 +38,7 @@
         "@types/node": "^15.12.2",
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.27.0",
         "@typescript-eslint/parser": "^4.27.0",
         "babel-plugin-transform-typescript-metadata": "^0.3.2",
