feat: 🎸 request and utils modules

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "axios": "^0.26.1",
         "immutable": "^4.0.0",
-        "khamsa": "^0.9.4",
+        "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
         "mustache": "^4.2.0",
+        "querystring": "^0.2.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^6.2.2",
@@ -31,6 +33,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-proposal-decorators": "^7.17.2",
+        "@types/axios": "^0.14.0",
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
