--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
             "esnext",
             "es2017",
             "es2015",
-            "es2016"
+            "es2016",
+            "esnext.asynciterable"
         ],
         "allowJs": true,
         "skipLibCheck": true,
