refactor: 💡 use @pugio/* for request and utils

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@lenconda/shuffle-mui-theme": "^1.0.0",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "^5.5.3",
+        "@pugio/case-transformer": "^2.0.5",
+        "@pugio/request": "^2.0.5",
+        "@pugio/types": "^2.0.5",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -15,7 +18,6 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
-        "axios": "^0.26.1",
         "immutable": "^4.0.0",
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
@@ -33,7 +35,6 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-proposal-decorators": "^7.17.2",
-        "@types/axios": "^0.14.0",
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
