--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "clsx": "^1.1.1",
         "immutable": "^4.0.0",
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
