--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
         "npm-run-all": "^4.1.5",
         "react-app-rewired": "^2.2.1",
         "react-dev-utils": "^12.0.0",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "webpack-bundle-analyzer": "^4.5.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
