--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,12 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "paths": {
+            "@/*": ["./src/*"],
+            "@modules/*": ["./src/modules/*"]
+        },
+        "baseUrl": "."
     },
     "include": [
         "src"
