--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
         "mustache": "^4.2.0",
         "querystring": "^0.2.1",
         "react": "^16.14.0",
+        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^16.14.0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
+        "react-scrollbar": "^0.5.6",
+        "simplebar-react": "^2.3.6",
         "typescript": "^4.6.3",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4",
@@ -43,6 +46,7 @@
         "@types/node": "^15.12.2",
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
+        "@types/react-scrollbar": "^0.5.3",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.27.0",
         "@typescript-eslint/parser": "^4.27.0",
