--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
         "mustache": "^4.2.0",
+        "qs": "^6.10.3",
         "querystring": "^0.2.1",
         "react": "^16.14.0",
         "react-custom-scrollbars": "^4.2.1",
@@ -45,6 +46,7 @@
         "@types/lodash": "^4.14.181",
         "@types/mustache": "^4.1.2",
         "@types/node": "^15.12.2",
+        "@types/qs": "^6.9.7",
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
         "@types/react-scrollbar": "^0.5.3",
