--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-scrollbar": "^0.5.6",
+        "requirejs": "^2.3.6",
         "simplebar-react": "^2.3.6",
         "typescript": "^4.6.3",
         "uuid": "^8.3.2",
@@ -50,6 +51,7 @@
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
         "@types/react-scrollbar": "^0.5.3",
+        "@types/requirejs": "^2.1.34",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.27.0",
         "@typescript-eslint/parser": "^4.27.0",
