--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "less-loader": "^7.3.0",
         "md5-file": "^5.0.0",
         "npm-run-all": "^4.1.5",
+        "react-app-rewire-multiple-entry": "^2.2.1",
         "react-app-rewired": "^2.2.1",
         "react-dev-utils": "^12.0.0",
         "rimraf": "^3.0.2",
