--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "qs": "^6.10.3",
         "querystring": "^0.2.1",
         "react": "^17.0.2",
+        "react-activation": "^0.10.1",
         "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
