--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.8.2",
-        "@emotion/styled": "^11.8.1",
+        "@emotion/react": "11.8.2",
+        "@emotion/styled": "11.8.1",
         "@lenconda/shuffle-mui-theme": "^1.0.0",
         "@mui/icons-material": "^5.5.1",
-        "@mui/material": "^5.2.5",
+        "@mui/material": "5.2.5",
         "@pugio/case-transformer": "^2.0.5",
         "@pugio/request": "^2.0.5",
         "@pugio/types": "^2.0.5",
@@ -26,10 +26,9 @@
         "mustache": "^4.2.0",
         "qs": "^6.10.3",
         "querystring": "^0.2.1",
-        "react": "^17.0.2",
-        "react-activation": "^0.10.1",
-        "react-custom-scrollbars": "^4.2.1",
-        "react-dom": "^17.0.2",
+        "react": "17.0.2",
+        "react-activation": "0.10.1",
+        "react-dom": "17.0.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-scrollbar": "^0.5.6",
