--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
+        "@types/mkcert": "^1.2.0",
         "@types/mustache": "^4.1.2",
         "@types/node": "^15.12.2",
         "@types/qs": "^6.9.7",
@@ -61,12 +62,13 @@
         "customize-cra-less-loader": "^2.0.0",
         "eslint": "^7.28.0",
         "eslint-config-alloy": "^4.1.0",
-        "fs-extra": "^10.0.0",
+        "fs-extra": "^10.1.0",
         "glob": "^7.1.7",
         "jest": "^27.0.4",
         "less": "^4.1.2",
         "less-loader": "^7.3.0",
         "md5-file": "^5.0.0",
+        "mkcert": "^1.5.0",
         "npm-run-all": "^4.1.5",
         "react-app-rewire-multiple-entry": "^2.2.1",
         "react-app-rewired": "^2.2.1",
@@ -77,6 +79,7 @@
     "scripts": {
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
+        "cert": "node scripts/cert.js",
         "test": "react-app-rewired test"
     },
     "eslintConfig": {
