--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@pugio/case-transformer": "^2.0.5",
         "@pugio/request": "^2.0.5",
         "@pugio/types": "^2.0.5",
+        "@pugio/xterm": "^2.0.5",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -34,6 +35,8 @@
         "react-scrollbar": "^0.5.6",
         "requirejs": "^2.3.6",
         "simplebar-react": "^2.3.6",
+        "socket.io": "^4.4.1",
+        "socket.io-client": "^4.4.1",
         "typescript": "^4.6.3",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4",
