--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
         "socket.io": "^4.4.1",
         "socket.io-client": "^2.4.0",
         "typescript": "^4.6.3",
+        "use-async-effect": "^2.2.5",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4",
+        "xterm-addon-fit": "^0.5.0",
         "zustand": "^3.7.1"
     },
     "devDependencies": {
