--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
         "@types/react-dom": "^17.0.14",
         "ahooks": "^3.3.0",
         "clsx": "^1.1.1",
+        "color": "^4.2.3",
         "immutable": "^4.0.0",
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
         "mustache": "^4.2.0",
+        "notistack": "^2.0.4",
         "qs": "^6.10.3",
         "querystring": "^0.2.1",
         "react": "17.0.2",
         "react-activation": "0.10.1",
+        "react-contextmenu": "^2.14.0",
         "react-dom": "17.0.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
@@ -47,6 +50,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-proposal-decorators": "^7.17.2",
+        "@types/color": "^3.0.3",
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
