feat: 🎸 update theme config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@emotion/react": "11.8.2",
         "@emotion/styled": "11.8.1",
-        "@lenconda/shuffle-mui-theme": "^1.0.0",
+        "@lenconda/shuffle-mui-theme": "^2.0.0",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "5.2.5",
         "@pugio/case-transformer": "^2.1.0",
@@ -25,6 +25,7 @@
         "immutable": "^4.0.0",
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
+        "muibox": "^2.0.0",
         "mustache": "^4.2.0",
         "notistack": "^2.0.4",
         "qs": "^6.10.3",
@@ -55,6 +56,7 @@
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
         "@types/mkcert": "^1.2.0",
+        "@types/muibox": "^1.3.2",
         "@types/mustache": "^4.1.2",
         "@types/node": "^15.12.2",
         "@types/qs": "^6.9.7",
