--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,18 @@
         {
             "id": "zh_CN",
             "title": "中文（中国大陆）"
+        },
+        {
+            "id": "es",
+            "title": "español"
+        },
+        {
+            "id": "ko",
+            "title": "한국어"
+        },
+        {
+            "id": "ru",
+            "title": "русский"
         }
     ]
 }
