--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-activation": "0.10.1",
         "react-contextmenu": "^2.14.0",
         "react-dom": "17.0.2",
+        "react-mui-confirm": "^1.0.1",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-scrollbar": "^0.5.6",
