--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@lenconda/shuffle-mui-theme": "^2.1.0",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "5.2.5",
+        "@mui/styles": "^5.7.0",
         "@pugio/case-transformer": "^2.1.0",
         "@pugio/request": "^2.1.0",
         "@pugio/types": "^2.1.0",
