--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "ahooks": "^3.3.0",
         "clsx": "^1.1.1",
         "color": "^4.2.3",
+        "event-emitter": "^0.3.5",
         "immutable": "^4.0.0",
         "khamsa": "^0.9.5",
         "lodash": "^4.17.21",
@@ -53,6 +54,7 @@
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@babel/plugin-proposal-decorators": "^7.17.2",
         "@types/color": "^3.0.3",
+        "@types/event-emitter": "^0.3.3",
         "@types/is-promise": "^2.2.0",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.181",
