--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@antv/g2": "^4.2.2",
         "@emotion/react": "11.8.2",
         "@emotion/styled": "11.8.1",
         "@lenconda/shuffle-mui-theme": "^2.1.0",
