--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "react-app-rewired": "^2.2.1",
         "react-dev-utils": "^12.0.0",
         "rimraf": "^3.0.2",
+        "svg-inline-loader": "^0.8.2",
         "webpack-bundle-analyzer": "^4.5.0"
     },
     "scripts": {
